# python-julia-comparison

./: README.md  init.sh  pyproject.toml  run_all.sh  run_test.sh  script.sh
src/: add.jl  add.py  benchmarks.jl  benchmarks.py
