[tool.poetry]
name = "python-julia-comparison"
version = "0.1.0"
description = ""
authors = ["Fabian Busch, Marius Bause"]
readme = "README.md"
packages = [
  {include = "src"},
]


[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
